[gd_scene load_steps=3 format=3 uid="uid://bv1i7q8bxfe2c"]

[ext_resource type="Script" path="res://player/player.gd" id="1_kd16u"]
[ext_resource type="Texture2D" uid="uid://swp1pl2numl0" path="res://art/player.png" id="2_bwh8y"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_kd16u")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_bwh8y")

[node name="MarkerContainer" type="Node2D" parent="."]

[node name="1" type="Marker2D" parent="MarkerContainer"]
position = Vector2(95, -31)

[node name="2" type="Marker2D" parent="MarkerContainer"]
position = Vector2(99, 17)
rotation = 0.0349066

[node name="3" type="Marker2D" parent="MarkerContainer"]
position = Vector2(95, -74)
rotation = 0.0349066

[node name="4" type="Marker2D" parent="MarkerContainer"]
position = Vector2(106, 61)
rotation = -0.771436

[node name="5" type="Marker2D" parent="MarkerContainer"]
position = Vector2(98, -113)
rotation = 1.00182

[node name="BulletFactory2D" type="BulletFactory2D" parent="."]

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="area_entered" from="BulletFactory2D" to="." method="_on_bullet_factory_2d_area_entered"]
[connection signal="body_entered" from="BulletFactory2D" to="." method="_on_bullet_factory_2d_body_entered"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
